--- a/lth_ecg_copy.ipynb
+++ b/lth_ecg_copy.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "5a973793",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "2026-01-13 19:43:16.032886: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "/opt/python/lib/python3.13/site-packages/keras/src/export/tf2onnx_lib.py:8: FutureWarning: In the future `np.object` will be defined as the corresponding NumPy scalar.\n",
+      "  if not hasattr(np, \"object\"):\n"
      ]
     }
    ],
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8c89e429",
    "metadata": {},
    "outputs": [],
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8bb08e54",
    "metadata": {},
    "outputs": [],
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "325ed667",
    "metadata": {},
    "outputs": [],
@@ -326,12 +328,12 @@
     "            print(f\"\\n[Early Stopping] F1 Val ({cinc_f1:.4f}) >= 0.826. We stop here, at epoch {epoch:.4f}, the training of the lottery ticket.\")\n",
     "            break\n",
     "    \n",
-    "    return model, best_f1_val, epoch\n"
+    "    return model, best_f1_val, epoch*len(train_loader)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b7791d61",
    "metadata": {},
    "outputs": [],
@@ -378,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7e2d5e11",
    "metadata": {},
    "outputs": [],
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "3267fee4",
    "metadata": {},
    "outputs": [],
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c1896bb6",
    "metadata": {},
    "outputs": [],
@@ -855,7 +857,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7676/7676 [00:21<00:00, 362.26it/s]\n"
+      "100%|██████████| 7676/7676 [00:22<00:00, 340.80it/s]\n"
      ]
     },
     {
@@ -869,7 +871,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 852/852 [00:02<00:00, 345.16it/s]\n"
+      "100%|██████████| 852/852 [00:02<00:00, 364.88it/s]\n"
      ]
     },
     {
@@ -1236,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "d729f626",
    "metadata": {},
    "outputs": [
@@ -1263,6 +1265,207 @@
     "plt.gca().invert_xaxis()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e70e8691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_lth_one_shot(pruning_params, network, train_loader, val_loader, loss_func):\n",
+    "\n",
+    "    prior = calculate_priors(train_loader, device, 4, 500).to(device)\n",
+    "    initial_untrained_model = copy.deepcopy(network)\n",
+    "    initial_mask = Mask.ones_like(network)\n",
+    "    initial_mask_np=initial_mask.numpy()\n",
+    "    pruning_percentage = pruning_params[\"p_init\"]/100\n",
+    "    f1_metric = MulticlassF1Score(num_classes=4, average=None).to(device)\n",
+    "    D=copy.deepcopy(network)\n",
+    "\n",
+    "    print(\"\\n===== Training model =====\")\n",
+    "    D, final_f1, stop = train_model(D, train_loader, val_loader, loss_func, prior=prior, epochs=20, tb_logger=None)\n",
+    "\n",
+    "    if isinstance(D, PrunedModel):\n",
+    "        model_to_prune = D.model\n",
+    "    else:\n",
+    "        model_to_prune = D\n",
+    "\n",
+    "    # Prune p_init% of weights which are of least magnitude\n",
+    "    \n",
+    "    new_mask = prune(pruning_percentage, pruning_params[\"pruning_layers_to_ignore\"], model_to_prune, initial_mask)\n",
+    "\n",
+    "    D_sparse = PrunedModel(model=model_to_prune,mask = new_mask).to(device)\n",
+    "\n",
+    "    # Validation\n",
+    "    step = 0\n",
+    "    D_sparse.eval()\n",
+    "    val_loop = create_tqdm_bar(val_loader, desc=f'Validation Sparse Model [step : {step}]')\n",
+    "    f1_metric.reset() # Reset pour calculer uniquement la val\n",
+    "        \n",
+    "    with torch.no_grad():\n",
+    "        for val_iteration, batch in val_loop:\n",
+    "            ecgs, labels = batch\n",
+    "            ecgs, labels = ecgs.to(device), labels.to(device)\n",
+    "\n",
+    "            pred = D_sparse(ecgs) # Sortie probable: (Batch, Classes, Time)\n",
+    "\n",
+    "            probs = F.softmax(pred, dim=1).transpose(1, 2)\n",
+    "            adjusted_probs = probs / prior\n",
+    "                \n",
+    "            # 2. Argmax pour obtenir les indices de classes : (B, S)\n",
+    "            indices = torch.argmax(adjusted_probs, dim=2)\n",
+    "                \n",
+    "            # 3. Réduction temporelle par le MODE : (B,)\n",
+    "            final_preds, _ = torch.mode(indices, dim=1)\n",
+    "                \n",
+    "            # 4. Réduction des labels (Batch, Séquence) -> (Batch,)\n",
+    "            final_labels = labels[:, 0] if labels.dim() > 1 else labels\n",
+    "                \n",
+    "            # Mise à jour de la métrique (Tenseurs 1D d'entiers)\n",
+    "            f1_metric.update(final_preds, final_labels)\n",
+    "\n",
+    "            # Calcul du CINC Average partiel pour la barre de progression\n",
+    "            current_val_f1s = f1_metric.compute()\n",
+    "            current_val_cinc = torch.mean(current_val_f1s[:3]).item() # Moyenne A, N, O\n",
+    "            # Update the progress bar.\n",
+    "            val_loop.set_postfix(\n",
+    "                f1_val=f\"{current_val_cinc:.4f}\")\n",
+    "\n",
+    "    # Reset unpruned weights to their initial random values and D = D_sparse\n",
+    "    D = PrunedModel(model=copy.deepcopy(initial_untrained_model), mask=new_mask).to(device)\n",
+    "        \n",
+    "    remaining_weights_number = sum(v.sum().item() for v in new_mask.values())\n",
+    "\n",
+    "    initial_mask = new_mask\n",
+    "    \n",
+    "    return D, initial_mask, current_val_cinc, remaining_weights_number\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "940ed9e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97.61904761904762\n",
+      "\n",
+      "===== Training model =====\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training Epoch [1/20]: 100%|███████████████████████| 240/240 [00:48<00:00,  4.92it/s, curr_train_f1=0.5281, curr_train_loss=0.70622690, lr=0.00100000]\n",
+      "Validation Epoch [1/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 15.17it/s, f1_val=0.6377, val_loss=0.75208867]\n",
+      "Training Epoch [2/20]: 100%|███████████████████████| 240/240 [00:50<00:00,  4.78it/s, curr_train_f1=0.6682, curr_train_loss=0.57858966, lr=0.00100000]\n",
+      "Validation Epoch [2/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 15.09it/s, f1_val=0.7349, val_loss=0.82033175]\n",
+      "Training Epoch [3/20]: 100%|███████████████████████| 240/240 [00:50<00:00,  4.77it/s, curr_train_f1=0.7390, curr_train_loss=0.57802227, lr=0.00100000]\n",
+      "Validation Epoch [3/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 14.82it/s, f1_val=0.7033, val_loss=0.56668943]\n",
+      "Training Epoch [4/20]: 100%|███████████████████████| 240/240 [00:49<00:00,  4.81it/s, curr_train_f1=0.7613, curr_train_loss=0.49721076, lr=0.00100000]\n",
+      "Validation Epoch [4/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 15.13it/s, f1_val=0.7440, val_loss=0.37360260]\n",
+      "Training Epoch [5/20]: 100%|███████████████████████| 240/240 [00:49<00:00,  4.84it/s, curr_train_f1=0.7885, curr_train_loss=0.48219339, lr=0.00100000]\n",
+      "Validation Epoch [5/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 15.19it/s, f1_val=0.7462, val_loss=0.36862689]\n",
+      "Training Epoch [6/20]: 100%|███████████████████████| 240/240 [00:49<00:00,  4.86it/s, curr_train_f1=0.8018, curr_train_loss=0.44416085, lr=0.00100000]\n",
+      "Validation Epoch [6/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 15.28it/s, f1_val=0.7651, val_loss=0.53996074]\n",
+      "Training Epoch [7/20]: 100%|███████████████████████| 240/240 [00:49<00:00,  4.88it/s, curr_train_f1=0.8149, curr_train_loss=0.36503297, lr=0.00100000]\n",
+      "Validation Epoch [7/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 15.05it/s, f1_val=0.8338, val_loss=0.46026850]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Early Stopping] F1 Val (0.8338) >= 0.826. We stop here, at epoch 6.0000, the training of the lottery ticket.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Validation Sparse Model [step : 0]: 100%|██████████████████████████████████████████████████████████████| 27/27 [00:01<00:00, 14.79it/s, f1_val=0.0160]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trying to run a one shot pruning\n",
+    "# To get directly a reduction of the model from 42 MB to 1 MB one needs to prune 1-1/42% of the weights\n",
+    "pruning_params = {\n",
+    "                  \"p_init\" : 30,\n",
+    "                  \"target_reduction_factor\" : 42, # to reach a 1 MB model size\n",
+    "                  \"alpha\" : 1.1,\n",
+    "                  \"pruning_layers_to_ignore\" : None\n",
+    "                  }\n",
+    "\n",
+    "sparse_model, mask, val_cinc, remaining_weights = run_lth_one_shot(pruning_params, model, train_loader, val_loader, loss_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a35618f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training Epoch [1/20]: 100%|███████████████████████| 240/240 [00:48<00:00,  4.91it/s, curr_train_f1=0.8360, curr_train_loss=0.42120087, lr=0.00100000]\n",
+      "Validation Epoch [1/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 14.97it/s, f1_val=0.8299, val_loss=0.51570982]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Early Stopping] F1 Val (0.8299) >= 0.826. We stop here, at epoch 0.0000, the training of the lottery ticket.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prior = calculate_priors(train_loader, device, 4, 500).to(device)\n",
+    "sparse_model, final_f1, early_stop = train_model(\n",
+    "        sparse_model,\n",
+    "        train_loader,\n",
+    "        val_loader,\n",
+    "        loss_func,\n",
+    "        prior=prior,\n",
+    "        epochs=20,\n",
+    "        tb_logger=None\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8100a096",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8298954963684082 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_f1, early_stop)"
    ]
   },
   {
