--- a/main.ipynb
+++ b/main.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cb0b5da5",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
     "import os\n",
     "\n",
     "# Chemin vers le dossier décompressé\n",
-    "data_path = 'training2017/'\n",
+    "data_path = 'data/training2017/'\n",
     "\n",
     "# Choisissons un fichier au hasard, par exemple A00001\n",
     "record_name = 'A00001'\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c7d08e6c",
    "metadata": {},
    "outputs": [
@@ -112,8 +112,8 @@
     "plt.figure(figsize=(12, 4))\n",
     "plt.plot(time, signal, color='blue', linewidth=0.8)\n",
     "\n",
-    "plt.title(f\"ECG du patient {record_name} (Lead I)\")\n",
-    "plt.xlabel(\"Temps (secondes)\")\n",
+    "plt.title(f\"Example of ECG recording from Physionet 2017 database\")\n",
+    "plt.xlabel(\"Time (secondes)\")\n",
     "plt.ylabel(\"Amplitude (mV)\")\n",
     "plt.grid(True, which='both', linestyle='--', alpha=0.7)\n",
     "\n",
