clean and comment code

--- a/lth_ecg_final.ipynb
+++ b/lth_ecg_final.ipynb
@@ -47,21 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f893f2eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pruning_params = {\n",
-    "                  \"p_init\" : 30, # like in Sahu et al. 2022\n",
-    "                  \"target_reduction_factor\" : 42, # to reach a 1 MB model size\n",
-    "                  \"alpha\" : 1.1, # like in Sahu et al. 2022\n",
-    "                  \"pruning_layers_to_ignore\" : None\n",
-    "                  }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b954c502",
    "metadata": {},
    "outputs": [],
@@ -113,7 +98,7 @@
     "\n",
     "    step = 0\n",
     "\n",
-    "    # In case we interrupted the experience and we want to resume it \n",
+    "    # In case we interrupted the experience and we want to resume it at the step it stopped\n",
     "    if resume and os.path.exists(checkpoint_file):\n",
     "        \n",
     "        checkpoint = load_checkpoint(checkpoint_file)  # Load the checkpoint file\n",
@@ -142,11 +127,11 @@
     "        pruning_fraction = pruning_percentage/100\n",
     "        \n",
     "        print(f\"\\n{'='*30} STEP {step} {'='*30}\")\n",
-    "        print(f\"remaining_weights_number = {remaining_weights_number:.2e}\")\n",
-    "        print(\"current reduction factor = \", np.round(initial_weights_number/remaining_weights_number, 2), ' over 42')\n",
-    "        print(\"pruning percentage = \", np.round(pruning_percentage,2), ' %')\n",
-    "        print(\"pruning fraction = \", np.round(pruning_fraction,2))\n",
-    "        print(\"model sparcity (percentage of weight that has been pruned): \", current_mask.sparsity )  \n",
+    "        print(f\"Remaining_weights_number = {remaining_weights_number:.2e}\")\n",
+    "        print(\"Current reduction factor (theta) = \", np.round(initial_weights_number/remaining_weights_number, 2), ' over 42')\n",
+    "        print(\"Pruning percentage = \", np.round(pruning_percentage,2), ' %')\n",
+    "        print(\"Pruning fraction = \", np.round(pruning_fraction,2))\n",
+    "        print(\"Model sparcity (percentage of weight that has been pruned): \", current_mask.sparsity )  \n",
     "        \n",
     "        # Train the DL network with the given data\n",
     "        D,final_f1, f1_through_training = train_model(D, train_loader, val_loader, loss_func, device, prior = prior, epochs=20)\n",
@@ -610,6 +595,15 @@
     "device_str = \"cuda\"\n",
     "device = torch.device(device_str if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Running on {device}\")\n",
+    "\n",
+    "\n",
+    "pruning_params = {\n",
+    "                  \"p_init\" : 30, # like in Sahu et al. 2022\n",
+    "                  \"target_reduction_factor\" : 42, # to reach a 1 MB model size\n",
+    "                  \"alpha\" : 1.1, # like in Sahu et al. 2022\n",
+    "                  \"pruning_layers_to_ignore\" : None\n",
+    "                  }\n",
+    "\n",
     "\n",
     "# Run the LTH-ECG Pruning Algorithm from Sahu et al. (2022) to find a Winning Ticket\n",
     "final_mask, history_theta, history_f1 = run_lth_ecg(pruning_params, model, train_loader, val_loader, loss_func, device) "
