test if working

--- a/checkpoints/plot_from_checkpoints.ipynb
+++ b/checkpoints/plot_from_checkpoints.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "af7edafc",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "lth_ecg_checkpoint = load_checkpoint(\"lth_ecg_checkpoint.pth\")\n",
+    "lth_ecg_checkpoint = load_checkpoint(\"checkpoints/lth_ecg_checkpoint.pth\")\n",
     "\n",
     "lth_ecg_step = lth_ecg_checkpoint['step']\n",
     "lth_ecg_pruning_percentage = lth_ecg_checkpoint['pruning_percentage']\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c5ba175f",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "it_pru_checkpoint = load_checkpoint(\"iterative_pruning_weight_rewinding_True_checkpoint.pth\")\n",
+    "it_pru_checkpoint = load_checkpoint(\"checkpoints/iterative_pruning_weight_rewinding_True_checkpoint.pth\")\n",
     "\n",
     "it_pru_step = it_pru_checkpoint['step']\n",
     "it_pru_pruning_percentage = it_pru_checkpoint['pruning_percentage']\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8a61ad1d",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "it_pru_no_rew_checkpoint = load_checkpoint(\"iterative_pruning_weight_rewinding_False_checkpoint.pth\")\n",
+    "it_pru_no_rew_checkpoint = load_checkpoint(\"checkpoints/iterative_pruning_weight_rewinding_False_checkpoint.pth\")\n",
     "\n",
     "it_pru_no_rew_step = it_pru_no_rew_checkpoint['step']\n",
     "it_pru_no_rew_pruning_percentage = it_pru_no_rew_checkpoint['pruning_percentage']\n",
@@ -368,7 +368,7 @@
     }
    ],
    "source": [
-    "checkpoint = load_checkpoint(\"lth_ecg_checkpoint.pth\")\n",
+    "checkpoint = load_checkpoint(\"checkpoints/lth_ecg_checkpoint.pth\")\n",
     "step = checkpoint['step']\n",
     "pruning_percentage = checkpoint['pruning_percentage']\n",
     "current_mask = checkpoint['current_mask']\n",
