--- a/lth_ecg_final.ipynb
+++ b/lth_ecg_final.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5a973793",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -28,15 +19,14 @@
     "from torch.utils.data import DataLoader, random_split\n",
     "import torch.nn.init as init\n",
     "from tqdm import tqdm\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
     "from torchsummary import summary\n",
     "from torchmetrics.classification import MulticlassF1Score\n",
-    "from load_data import ECGDataset, ECGCollate, SmartBatchSampler, load_dataset, load_ecg\n",
+    "from utils.load_data import ECGDataset, ECGCollate, SmartBatchSampler, load_dataset, load_ecg\n",
     "from resnet1d import ResNet1D\n",
-    "from plot_utils import plot_lth_progress, plot_layerwise_remaining_params\n",
-    "from save_utils import save_checkpoint, load_checkpoint\n",
-    "from train_utils import train_model, create_tqdm_bar, calculate_priors, weights_init_kaiming\n",
-    "from pruning_utils import Mask, prune, PrunedModel\n",
+    "from utils.plot_utils import plot_lth_progress, plot_layerwise_remaining_params\n",
+    "from utils.save_utils import save_checkpoint, load_checkpoint\n",
+    "from utils.train_utils import train_model, create_tqdm_bar, calculate_priors, weights_init_kaiming\n",
+    "from utils.pruning_utils import Mask, prune, PrunedModel\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -46,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b954c502",
    "metadata": {},
    "outputs": [],
@@ -75,7 +65,7 @@
     "    \"\"\"\n",
     "    \n",
     "    # Initalization \n",
-    "    checkpoint_file = \"lth_ecg_checkpoint.pth\"\n",
+    "    checkpoint_file = \"checkpoints/lth_ecg_checkpoint.pth\"\n",
     "    \n",
     "    prior = calculate_priors(train_loader,device,4,500).to(device)\n",
     "\n",
@@ -224,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4e9c9a53",
    "metadata": {},
    "outputs": [
@@ -239,7 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7676/7676 [00:01<00:00, 4666.33it/s]\n"
+      "100%|██████████| 7676/7676 [00:01<00:00, 4856.27it/s]\n"
      ]
     },
     {
@@ -253,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 852/852 [00:00<00:00, 5369.93it/s]\n"
+      "100%|██████████| 852/852 [00:00<00:00, 5561.08it/s]\n"
      ]
     },
     {
@@ -266,8 +256,8 @@
       "MEAN :  8.029898  STD :  242.35907\n",
       "self.classes :  ['A', 'N', 'O', '~']\n",
       "self.class_to_int :  {'A': 0, 'N': 1, 'O': 2, '~': 3}\n",
-      "Tri du dataset par longueur pour minimiser le padding...\n",
-      "Tri du dataset par longueur pour minimiser le padding...\n"
+      "Sorting dataset by length to minimize padding...\n",
+      "Sorting dataset by length to minimize padding...\n"
      ]
     }
    ],
@@ -314,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "21393819",
    "metadata": {},
    "outputs": [
@@ -323,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "Running on cuda\n",
-      "Initialisation Kaiming He appliquée.\n"
+      "Kaiming He Initialisation applied ! \n"
      ]
     }
    ],
@@ -343,6 +333,11 @@
     "    \"use_do\" : True  # Use Dropout layers \n",
     "    } \n",
     "\n",
+    "# Get GPU if available \n",
+    "device_str = \"cuda\"\n",
+    "device = torch.device(device_str if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Running on {device}\")\n",
+    "\n",
     "# Instantiate SOTA model for ECG Classification\n",
     "model = ResNet1D(**hparams).to(device)\n",
     "\n",
@@ -353,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3b9a3fdf",
    "metadata": {},
    "outputs": [
@@ -590,12 +585,6 @@
    "source": [
     "# The loss function we use for classification.\n",
     "loss_func = nn.CrossEntropyLoss() \n",
-    "\n",
-    "# Get GPU if available \n",
-    "device_str = \"cuda\"\n",
-    "device = torch.device(device_str if torch.cuda.is_available() else \"cpu\")\n",
-    "print(f\"Running on {device}\")\n",
-    "\n",
     "\n",
     "pruning_params = {\n",
     "                  \"p_init\" : 30, # like in Sahu et al. 2022\n",
