--- a/iterative_pruning_f1.ipynb
+++ b/iterative_pruning_f1.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5a973793",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2026-01-15 15:01:30.240851: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2026-01-15 15:01:30.241369: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-15 15:01:30.325484: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX512_FP16 AVX_VNNI AMX_TILE AMX_INT8 AMX_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-01-15 15:01:32.264828: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-15 15:01:32.265412: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -32,15 +19,14 @@
     "from torch.utils.data import DataLoader, random_split\n",
     "import torch.nn.init as init\n",
     "from tqdm import tqdm\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
     "from torchsummary import summary\n",
     "from torchmetrics.classification import MulticlassF1Score\n",
-    "from load_data import ECGDataset, ECGCollate, SmartBatchSampler, load_dataset, load_ecg\n",
+    "from utils.load_data import ECGDataset, ECGCollate, SmartBatchSampler, load_dataset, load_ecg\n",
     "from resnet1d import ResNet1D\n",
-    "from plot_utils import plot_lth_progress, plot_layerwise_remaining_params\n",
-    "from save_utils import save_checkpoint, load_checkpoint\n",
-    "from train_utils import train_model, create_tqdm_bar, calculate_priors, weights_init_kaiming\n",
-    "from pruning_utils import Mask, prune, PrunedModel\n",
+    "from utils.plot_utils import plot_lth_progress, plot_layerwise_remaining_params\n",
+    "from utils.save_utils import save_checkpoint, load_checkpoint\n",
+    "from utils.train_utils import train_model, create_tqdm_bar, calculate_priors, weights_init_kaiming\n",
+    "from utils.pruning_utils import Mask, prune, PrunedModel\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -50,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "64f0610b",
    "metadata": {},
    "outputs": [],
@@ -79,7 +65,7 @@
     "        history_f1 (list[float]): Validation F1 score history.\n",
     "    \"\"\"\n",
     "    # Initialization\n",
-    "    checkpoint_file = f\"iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}_checkpoint.pth\"\n",
+    "    checkpoint_file = f\"checkpoints/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}_checkpoint.pth\"\n",
     "    \n",
     "    pruning_percentage = pruning_params[\"pruning_percentage\"]\n",
     "    n = pruning_params['nb_of_steps']\n",
@@ -135,7 +121,7 @@
     "        print(\"Model sparcity (percentage of weight that has been pruned): \", current_mask.sparsity )  \n",
     "        \n",
     "        # Train the DL network with the given data\n",
-    "        D,final_f1, f1_through_training = train_model(D, train_loader, val_loader, loss_func, name = \"lth_ecg\", prior = prior, epochs=20,tb_logger=None)\n",
+    "        D,final_f1, f1_through_training = train_model(D, train_loader, val_loader, loss_func, device, prior = prior, epochs=20)\n",
     "\n",
     "        # Backup\n",
     "        # history_theta.append(initial_weights_number/remaining_weights_number)\n",
@@ -229,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4e9c9a53",
    "metadata": {},
    "outputs": [
@@ -244,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7676/7676 [00:01<00:00, 5615.03it/s]\n"
+      "100%|██████████| 7676/7676 [00:01<00:00, 4329.62it/s]\n"
      ]
     },
     {
@@ -258,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 852/852 [00:00<00:00, 4968.54it/s]\n"
+      "100%|██████████| 852/852 [00:00<00:00, 5380.07it/s]\n"
      ]
     },
     {
@@ -271,8 +257,8 @@
       "MEAN :  8.029898  STD :  242.35907\n",
       "self.classes :  ['A', 'N', 'O', '~']\n",
       "self.class_to_int :  {'A': 0, 'N': 1, 'O': 2, '~': 3}\n",
-      "Tri du dataset par longueur pour minimiser le padding...\n",
-      "Tri du dataset par longueur pour minimiser le padding...\n"
+      "Sorting dataset by length to minimize padding...\n",
+      "Sorting dataset by length to minimize padding...\n"
      ]
     }
    ],
@@ -319,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "21393819",
    "metadata": {},
    "outputs": [
@@ -327,8 +313,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on cpu\n",
-      "Initialisation Kaiming He appliquée.\n"
+      "Running on cuda\n",
+      "--> Checkpoint loading : checkpoints/lth_ecg_checkpoint.pth\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mask'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     22\u001b[39m model = ResNet1D(**hparams).to(device)\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Ensure to get the same initial weigths as in the other experience\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m checkpoint = \u001b[43mload_checkpoint\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcheckpoints/lth_ecg_checkpoint.pth\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     26\u001b[39m model.load_state_dict(checkpoint[\u001b[33m'\u001b[39m\u001b[33minitial_weights\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/work/Advanced-ML-Project/utils/save_utils.py:17\u001b[39m, in \u001b[36mload_checkpoint\u001b[39m\u001b[34m(filename)\u001b[39m\n\u001b[32m     15\u001b[39m device = torch.device(\u001b[33m'\u001b[39m\u001b[33mcuda\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mcpu\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Load the checkpoint to the detected device\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmap_location\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights_only\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/site-packages/torch/serialization.py:1530\u001b[39m, in \u001b[36mload\u001b[39m\u001b[34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[39m\n\u001b[32m   1528\u001b[39m             \u001b[38;5;28;01mexcept\u001b[39;00m pickle.UnpicklingError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m   1529\u001b[39m                 \u001b[38;5;28;01mraise\u001b[39;00m pickle.UnpicklingError(_get_wo_message(\u001b[38;5;28mstr\u001b[39m(e))) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1530\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_load\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1531\u001b[39m \u001b[43m            \u001b[49m\u001b[43mopened_zipfile\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1532\u001b[39m \u001b[43m            \u001b[49m\u001b[43mmap_location\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1533\u001b[39m \u001b[43m            \u001b[49m\u001b[43mpickle_module\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1534\u001b[39m \u001b[43m            \u001b[49m\u001b[43moverall_storage\u001b[49m\u001b[43m=\u001b[49m\u001b[43moverall_storage\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1535\u001b[39m \u001b[43m            \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mpickle_load_args\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1536\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1537\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mmap:\n\u001b[32m   1538\u001b[39m     f_name = \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(f, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mf\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/site-packages/torch/serialization.py:2122\u001b[39m, in \u001b[36m_load\u001b[39m\u001b[34m(zip_file, map_location, pickle_module, pickle_file, overall_storage, **pickle_load_args)\u001b[39m\n\u001b[32m   2120\u001b[39m \u001b[38;5;28;01mglobal\u001b[39;00m _serialization_tls\n\u001b[32m   2121\u001b[39m _serialization_tls.map_location = map_location\n\u001b[32m-> \u001b[39m\u001b[32m2122\u001b[39m result = \u001b[43munpickler\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2123\u001b[39m _serialization_tls.map_location = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   2125\u001b[39m torch._utils._validate_loaded_sparse_tensors()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/site-packages/torch/serialization.py:2111\u001b[39m, in \u001b[36m_load.<locals>.UnpicklerWrapper.find_class\u001b[39m\u001b[34m(self, mod_name, name)\u001b[39m\n\u001b[32m   2109\u001b[39m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m   2110\u001b[39m mod_name = load_module_mapping.get(mod_name, mod_name)\n\u001b[32m-> \u001b[39m\u001b[32m2111\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfind_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmod_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'mask'"
      ]
     }
    ],
@@ -348,11 +349,16 @@
     "    \"use_do\" : True  # Use Dropout layers \n",
     "    } \n",
     "\n",
+    "# Get GPU if available \n",
+    "device_str = \"cuda\"\n",
+    "device = torch.device(device_str if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Running on {device}\")\n",
+    "\n",
     "# Instantiate SOTA model for ECG Classification\n",
     "model = ResNet1D(**hparams).to(device)\n",
     "\n",
     "# Ensure to get the same initial weigths as in the other experience\n",
-    "checkpoint = load_checkpoint(\"lth_ecg_checkpoint.pth\")\n",
+    "checkpoint = load_checkpoint(\"checkpoints/lth_ecg_checkpoint.pth\")\n",
     "model.load_state_dict(checkpoint['initial_weights'])\n"
    ]
   },
@@ -384,10 +390,6 @@
     "# The loss function we use for classification.\n",
     "loss_func = nn.CrossEntropyLoss() \n",
     "\n",
-    "# Get GPU if available \n",
-    "device_str = \"cuda\"\n",
-    "device = torch.device(device_str if torch.cuda.is_available() else \"cpu\")\n",
-    "print(f\"Running on {device}\")\n",
     "\n",
     "pruning_params = {\n",
     "                  \"pruning_percentage\" : 30, # denoted as p in Frankle & Carbin\n",
